[package]
name = "rust-webpush"
version = "0.1.0"
authors = ["r2dev2bb8 <ronak.badhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.17.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.2", features = ["macros", "rt-core"] }
web-push = "0.7.2"

